# mlrun

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore.bak  .importlinter  .licenserc.json  .pre-commit-config.yaml  .readthedocs.yml  .vale.ini  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.dask  Dockerfile.db  Dockerfile.db-gunicorn  Dockerfile.httpd  Dockerfile.test  Jenkinsfile  MANIFEST.in  Makefile  Pipfile  README.md  Untitled.ipynb  build-imgs.sh  ce.logs  conda-arm64-requirements.txt  contributing.md  dask-requirements.txt  dependencies.py  deploy_env_template.yml  deploy_remote.py  dev-requirements.txt  docker-build.sh  documentation-howto.md  example1.py  example2.py  extras-requirements.txt  httpd-requirements.txt  (+20 more)
.circleci/: config.yml
.github/: dependabot.yml  pr-title-validation-config-side-branch.json  pr-title-validation-config.json
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.yaml  installation_issue.yaml
.github/workflows/: automatic-release.yaml  build-internal.yaml  build-workflow-matrix.json  build.yaml  ci.yaml  docs-language-linter.yaml  feature-release.yaml  go-ci.yaml  mlrun-kit-install-sanity.yml  opened-project.yml  periodic-rebuild  periodic-rebuild.yaml  post-release.yaml  pr-title-validation.yaml  release-pipeline-adapters.yaml  release.yaml  security_scan.yaml  system-tests-enterprise-v2.yml  system-tests-enterprise.yml  system-tests-opensource.yml  system-tests.yml  unstable.yaml
.run/: Deploy CE.run.xml  MLRun API.run.xml  Patch remote.run.xml  Unit tests.run.xml  ce.run.xml
automation/: requirements.txt  test.py
automation/common/: helpers.py
automation/deploy_igz/: README.md  deploy_env_template.yml  deploy_remote.py
automation/deployment/: README.md  __init__.py  ce.py  deployer.py  mlrun_ce.py
automation/package_test/: test.py  test_imports.sh
automation/patch_igz/: README.md  patch-api.yml  patch_env_template.yml  patch_remote.py
automation/release_notes/: generate.py
automation/scripts/: bundle_demos.py  compile_protobuf320_for_mac_arm64.sh  create_migration_mysql.sh  create_migration_sqlite.sh  github_workflow_free_space.sh  liveness_probe.sh  pypi_release_waiter.sh  system_test_select_branch.sh  test_migration_mysql.sh  update_demos.sh
automation/system_test/: cleanup.py  dev_utilities.py  prepare.py  run.py
automation/version/: run.py  version_file.py
ci/system_test/: run.py
ci/version/: run.py
dockerfiles/: Dockerfile.promote  README.md  api-requirements.txt  dask-requirements.txt  dev-requirements.txt  docker-build.sh  httpd-requirements.txt
dockerfiles/api/: Dockerfile
dockerfiles/app/: Dockerfile
dockerfiles/automation/: Dockerfile
dockerfiles/base/: Dockerfile  README.md  mlrun_requirements.txt  prepare.sh  requirements.txt
dockerfiles/builds/: Dockerfile.openmpi  README.md
dockerfiles/common/: Dockerfile
dockerfiles/dask/: Dockerfile
dockerfiles/gpu/: Dockerfile  prebaked.Dockerfile
dockerfiles/horovod/: Dockerfile-gpu
dockerfiles/httpd/: Dockerfile
dockerfiles/hvd/: Dockerfile
dockerfiles/hvd-gpu/: Dockerfile
dockerfiles/jupyter/: Dockerfile  README.ipynb  mlce-start.sh  mlcestart.sh  mlrun.env  (+1 more)
docs/: CONTRIBUTING.md  Makefile  api.rst  architecture.md  cheat-sheet.md  ci-pipeline.md  cli.md  cli.md.bak  conf.py  contents.rst  data-management-and-versioning.md  documentation-howto.md  ecosystem.md  end-to-end-pipeline.rst  examples.md  examples.rst  general.md  genindex.rst  glossary.md  hyper-params.ipynb  images.md  index.md  index.rst  install-kubernetes.md  install-local-docker-reg.md  install.md  job-submission-and-tracking.md  load-from-marketplace.md  make.bat  mlops-dev-flow.md  mlrun - Shortcut.lnk  mlrun-kit.md  mlrun.db.rst  mlrun.platforms.rst  mlrun.rst  mlrun.runtimes.rst  model-management-and-serving.md  modules.rst  projects.md  quick-start.ipynb  (+7 more)
examples/: Untitled.ipynb  best_fit.py  build.py  ci_example.py  daskpipe.yaml  data_prep.py  example1.py  function.py  function.yaml  handler.py  horovod-training.py  horovod_training.py  iris_xgb.py  load-project.ipynb  ml_pipe.ipynb  mlrun-basics.ipynb  mlrun-dask.ipynb  mlrun-mpijob-classify.ipynb  mlrun-sparkk8s.ipynb  mlrun_basics.ipynb  mlrun_code_annotations.ipynb  mlrun_dask.ipynb  mlrun_db.ipynb  mlrun_export_import.ipynb  mlrun_games.ipynb  mlrun_jobs.ipynb  mlrun_matplot.ipynb  mlrun_mpijob.ipynb  mlrun_mpijob_classify.ipynb  mlrun_nuclio.ipynb  mlrun_remote-spark.ipynb  mlrun_sparkk8s.ipynb  mlrun_vault.ipynb  model.bst  mpi_mlrun.ipynb  new-project.ipynb  nuclio_jobs.ipynb  nuclio_serving.ipynb  nulltst.py  params.csv  (+15 more)
go/: .golangci.yml  Makefile  go.mod  go.sum
hack/: Dockerfile.Horovod.mlrun  mlrun-all.yaml  mlrunapi.yaml  mlrundb.yaml  mlrunui.yaml
mlrun/: __init__.py  __main__.py  artifacts.py  builder.py  config.py  data_resources.py  data_types.py  datastore.py  errors.py  execution.py  features.py  funcdoc.py  iguazio.py  k8s_utils.py  kfp.py  kfpops.py  lists.py  model.py  mpijob.py  render.py  run.py  rundb.py  runtimes.py  scheduler.py  secrets.py  stores.py  targets.py  tomarkdown.py  utils.py
monitoring_application_demo/: iris-with-app-evidently.ipynb
pipeline-adapters/: CONTRIBUTING.md  Makefile  README.md
server/: __init__.py
system_test_ci/: run.py
tests/: Dockerfile.test-nb  XGBClassifier.pkl  common_fixtures.py  conftest.py  http_srv.py  info_cases.yml  last_log.py  no_ctx.py  notebooks.yml  notification  notification.json  param_file.csv  project.yaml  pytest.ini  rst_cases.yml  run_notebook_tests.py  secrets_test.txt  test_adam.py  test_builder.py  test_cli.py  test_code_to_func.py  test_common.py  test_config.py  test_convenience_methods.py  test_convenince_methods.py  test_dask.py  test_datastores.py  test_dbs.py  test_docker.py  test_errors.py  test_examples.py  test_execution.py  test_filedb.py  test_func_to_mod.py  test_funcdoc.py  test_httpd.py  test_httpdb.py  test_k8s_utils.py  test_kfp.py  test_log_serialization.py  (+19 more)
zeev/: mlflow-test.py  train.py
(+2963 files in other folders)
